--- a/home.html
+++ b/home.html
@@ -172,6 +172,7 @@
 			}
 		</style>
 	</head>
+	<!-- <script src="change.js" type="text/javascript"></script> -->
 	<body style="background-color: rgb(13, 17, 22);" id="main">
 		<div class="background">
 			<h1 style="text-align: center; color: rgb(0, 198, 198);">欢迎，这里是DarkStarLan主页</h1>
@@ -203,14 +204,14 @@
 					</a>
 				</div>
 				<div class="class1">
-					<a href="https://darkstarlan.github.io/notes/cpp.html">
+					<a href="https://darkstarlan.github.io/notes/content.html">
 						<button class="right">学习笔记</button>
 					</a>
 				</div>
 			</div>
 			<hr>
 			<h1 style="font-size: 80px; color:aquamarine;">这里有</h1> <br>
-			<h1 style="color:rgb(201, 201, 89);">超棒的各种<a href="https://darkstarlan.github.io/notes/cpp.html" style="color:rgb(252, 161, 82); font-size: 40px;">学习笔记</a></h1>
+			<h1 style="color:rgb(201, 201, 89);">超棒的各种<a href="notes/content.html" style="color:rgb(252, 161, 82); font-size: 40px;">学习笔记</a></h1>
 			<img src="img/note1.png" alt="一个好棒好棒的笔记" width="900px">
 			<h1 style="color:rgb(201, 201, 89); text-align: right;">超好玩的各种<a href="https://darkstarlan.github.io/download/cpp.html" style="color:rgb(252, 161, 82); font-size: 40px;">程序</a></h1>
 			<div align="right"><img src="img/game1.png" alt="一个好棒好棒的游戏" width="900px"></div>
