--- a/notes/content.html
+++ b/notes/content.html
@@ -126,5 +126,8 @@
         <div class="line">
             <h1 class="btn" onclick='window.open("python.html")'>Python笔记</h1>
         </div>
+        <div class="line">
+            <h1 class="btn" onclick='window.open("python.html")'>Java笔记</h1>
+        </div>
     </body>
 </html>
