--- a/notes/content.html
+++ b/notes/content.html
@@ -127,7 +127,7 @@
             <h1 class="btn" onclick='window.open("python.html")'>Python笔记</h1>
         </div>
         <div class="line">
-            <h1 class="btn" onclick='window.open("python.html")'>Java笔记</h1>
+            <h1 class="btn" onclick='window.open("java.html")'>Java笔记</h1>
         </div>
     </body>
 </html>
